# ffp

./: .travis.yml  AI.hs  Conf.hs  GameGUI.hs  KI.hs  LICENSE  Net.hs  PP.hs  README.md  Sm.hs  SmSpec.hs  Util.hs  funthello  funthello.cabal  funthello.hs  main.hs  network.hs  networkneu.hs  sysprak-gui  sysprak.cabal  sysprak.hs
Conf/: Args.hs  Gui.hs
GameGUI/: Internal.hs
Sm/: Internal.hs  Test.hs
