name:                funthello
version:             1.42
synopsis:            AI for the sysprak gameserver.
license:             OtherLicense
license-file:        LICENSE
author:              Albatrouss and Skruppy
category:            Game
build-type:          Simple
cabal-version:       >=1.18

Executable funthello
  main-is:             funthello.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       array >=0.5 && <0.6,
                       regex-posix >=0.95 && <0.96,
                       network >=2.6 && <2.7,
                       ansi-terminal >=0.6 && <0.7,
                       hspec >=2.1 && <2.2,
                       game-tree >=0.1 && <0.2,
                       optparse-applicative >=0.11 && <0.12,
                       gtk >=0.12 && <0.13,
                       MissingH >=1.2 && <1.3,
                       ConfigFile >=1.1 && <1.2

Test-Suite test-sm
  type:                exitcode-stdio-1.0
  main-is:             Sm/Test.hs
  default-language:    Haskell2010
  build-depends:       base >=4.7 && <4.8,
                       array >=0.5 && <0.6,
                       regex-posix >=0.95 && <0.96,
                       hspec >=2.1 && <2.2
